--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <nav id="navmenu" class="navmenu">
           <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#recent-posts">Tour Packeges</a></li>
             <li><a href="#">Things To Do in SriLanka</a></li>
             <li><a href="#">Contact</a></li>
@@ -199,7 +199,6 @@
 
       <!-- Hero Section -->
       <section id="hero" class="hero section dark-background">
-
         <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
           <div class="carousel-item active">
@@ -242,18 +241,17 @@
             </div>
           </div>
 
-          <!-- <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
+          <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
             <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
           </a>
 
           <a class="carousel-control-next" href="#hero-carousel" role="button" data-bs-slide="next">
             <span class="carousel-control-next-icon bi bi-chevron-right" aria-hidden="true"></span>
-          </a> -->
+          </a>
 
           <ol class="carousel-indicators"></ol>
 
         </div>
-
       </section><!-- /Hero Section -->
 
       <!-- Services Section -->
@@ -276,7 +274,7 @@
                   <div class="service-item-content">
                     <h3 class="service-heading" style="color: rgb(148, 148, 0);"><b>Yala National Park</b></h3>
                     <p class="mt-3">
-                      Swim alongside gentle sea turtles and admire the beauty of crystal-clear waters teeming with marine life.
+                      Yala National Park is a huge area of forest, grassland and lagoons bordering the Indian Ocean, in southeast Sri Lanka.
                     </p>
                   </div>
                 </div>
@@ -287,7 +285,7 @@
                   <div class="service-item-content">
                     <h3 class="service-heading" style="color: rgb(148, 148, 0);"><b>Sigiriya Lion Rock</b></h3>
                     <p class="mt-3">
-                      Discover vibrant marine life under moonlit waters for a unique underwater adventure.
+                      Sigiriya Lion Rock is an ancient rock fortress known for its massive column of rock that reaches nearly 200 meters high.
                     </p>
                   </div>
                 </div>
@@ -298,7 +296,7 @@
                   <div class="service-item-content">
                     <h3 class="service-heading" style="color: rgb(148, 148, 0);"><b>Snorkeling & Diving Adventures</b></h3>
                     <p class="mt-3">
-                      Explore vibrant coral reefs and discover marine wonders with our guided diving adventures designed for passionate divers.
+                      Explore the diverse marine life and wreck dives off Sri Lanka's coast.
                     </p>
                   </div>
                 </div>
@@ -309,7 +307,7 @@
                   <div class="service-item-content">
                     <h3 class="service-heading" style="color: rgb(148, 148, 0);"><b>Trekking & Hiking</b></h3>
                     <p class="mt-3">
-                      Witness the majesty of whales and playful dolphins in their natural habitat on our eco-friendly tours.
+                      A wide variety of trekking tours through rain forest patches, across paddy fields, rail roads & tunnels, tea estates, mountain, valleys, grassy plains, ...
                     </p>
                   </div>
                 </div>
@@ -327,40 +325,55 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 mb-4 mb-lg-0">
-                <img src="assets/img/img_long_5.jpg" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
+                <img src="assets/img/Travel/about-1.jpg" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
               </div>
               <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                <h3 class="content-subtitle text-white opacity-50">Why Choose Us</h3>
-                <h2 class="content-title mb-4">
+                <h3 class="content-subtitle text-white opacity-50">Why Choose Travel Go Lanka?</h3>
+                <!-- <h2 class="content-title mb-4">
                   More than <strong>5 years experience</strong> in Snorkeling & Diving industry
-                </h2>
+                </h2> -->
                 <p class="opacity-50">
                   Experience unmatched adventures with expert guides, top-tier equipment, and a commitment to sustainability. Your unforgettable journey begins here!
                 </p>
 
-                <div class="row my-5">
-                  <div class="col-lg-12 d-flex align-items-start mb-4">
-                    <i class="bi bi-currency-dollar me-2 display-4"></i>
+                <div class="row">
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-globe me-4 display-6"></i>
                     <div>
-                      <h4 class="m-0 h5 text-white">Convenient Payments:</h4>
-                      <p class="text-white opacity-50">We accept card payments (Visa and MasterCard) and QR payments for your convenience.</p>
+                      <h4 class="m-0 h6 text-white">Expertly Curated Tours</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Our travel packages are carefully designed to offer the best experiences across Sri Lanka.</p>
                     </div>
                   </div>
-                  <div class="col-lg-12 d-flex align-items-start mb-4">
-                    <i class="bi bi-heart me-4 display-6"></i>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-geo-alt me-4 display-6"></i>
                     <div>
-                      <h4 class="m-0 h5 text-white">Expert Team:</h4>
-                      <p class="text-white opacity-50">Our team includes certified PADI Divemasters and instructors to guide you professionally.</p>
+                      <h4 class="m-0 h6 text-white">Local Expertise</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">With in-depth knowledge of the island, we ensure authentic and immersive journeys.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-airplane me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">Reliable & Hassle-Free Travel</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">From transport to accommodations, we handle everything for a smooth experience.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-headset me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">24/7 Customer Support</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Our team is always available to assist you before, during, and after your trip.</p>
                     </div>
                   </div>
                   <div class="col-lg-12 d-flex align-items-start">
-                    <i class="bi bi-shop me-4 display-6"></i>
+                    <i class="bi bi-shield-check me-4 display-6"></i>
                     <div>
-                      <h4 class="m-0 h5 text-white">Your Safety is Our Priority:</h4>
-                      <p class="text-white opacity-50">Your well-being comes first. Our experienced guides and rigorous safety standards ensure every adventure is secure, so you can focus on making unforgettable memories.</p>
+                      <h4 class="m-0 h6 text-white">Your Safety is Our Priority</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Your well-being comes first. Our experienced guides and rigorous safety standards ensure every adventure is secure.</p>
                     </div>
                   </div>
-                </div>
+                </div>                
+
               </div>
             </div>
           </div>
@@ -373,27 +386,27 @@
         <div class="container">
           <div class="row gy-4 justify-content-between align-items-center">
             <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-              <img src="assets/img/Padi-Cources.jpg" alt="Image" class="img-fluid">
-              <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn"> -->
+              <img src="assets/img/Travel/about-2.jpg" alt="Image" class="img-fluid about_2-img">
                 <span class="play"><i class="bi bi-play-fill"></i></span>
               </a>
             </div>
             <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-              <h2 class="content-title mb-4"><b>About Us</b></h2>
-              <p>Welcome to <i>"Mirissa Snorkeling Center"</i> – Your Gateway to Oceanic Adventures!</p>
+              <h2 class="content-title mb-4"><b>About SriLanka</b></h2>
+              <p>Welcome to <i>"The Pearl of the Indian Ocean"</i> – Your Gateway to Oceanic Adventures!</p>
               <p class="mb-4">
-                Nestled in the heart of paradise, we are passionate about delivering unforgettable marine experiences to adventurers, nature lovers, and ocean enthusiasts. 
-                From swimming alongside majestic turtles to witnessing the breathtaking dance of whales and dolphins, our goal is to connect you with the magic of the sea.
+                Sri Lanka, an island paradise in the heart of the Indian Ocean, is a land of breathtaking landscapes, rich history, and vibrant culture. From golden beaches and lush tea plantations 
+                to ancient ruins and diverse wildlife, Sri Lanka offers a perfect blend of adventure, relaxation, and heritage.
               </p>
 
-              <h5>State-of-the-Art Equipment:</h5>
-              <p class="mt-0">We provide the latest, high-quality gear for all our activities, ensuring comfort, reliability, and top-notch performance throughout your journey.</p>
+              <h5>Stunning Beaches:</h5>
+              <p class="mt-0">Relax on pristine shores and experience world-class surfing, divig and snorkeling.</p>
 
-              <h5>Affordable Adventures:</h5>
-              <p class="mt-0">Enjoy world-class ocean experiences at Reasonable prices. We offer exceptional value without redusing on quality or safety.</p>
+              <h5>Wildlife & Nature:</h5>
+              <p class="mt-0">Spot elephants, leopards, and whales in national parks and marine sanctuaries.</p>
 
-              <h5>Eco-Friendly Practices:</h5>
-              <p class="mb-4 mt-0">We prioritize sustainability to protect the ocean for future generations.</p>
+              <h5>Scenic Hill Country:</h5>
+              <p class="mb-4 mt-0">Wander through misty mountains, waterfalls, and lush tea estates.</p>
+
             </div>
           </div>
         </div>
