--- a/about.html
+++ b/about.html
@@ -177,16 +177,16 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Mirissa Snorkeling Center / Sri Lanka">
-          <h1 class="sitename">Mirissa Snorkeling Center</h1>
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#" class="active">About Us</a></li>
-            <li><a href="index.html#recent-posts">Our Services</a></li>
-            <!-- <li><a href="gallery.html">Gallery</a></li> -->
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="index.html#recent-posts">Tour Packeges</a></li>
+            <li><a href="#">Things To Do in SriLanka</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -201,7 +201,7 @@
       <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/hero_1.jpg);">
         <div class="container position-relative">
           <h1>About</h1>
-          <p>At "Mirissa Snorkeling Center", we believe the ocean has a story to tell, and we’re here to help you hear it. Let us take you on a journey that’s safe, 
+          <p>At "Travels Go Lanka", we believe you has a story to tell, and we’re here to help you hear it. Let us take you on a journey that’s safe, 
             fun, and truly unforgettable.</p>
           <nav class="breadcrumbs">
             <ol>
@@ -218,131 +218,37 @@
         <div class="container">
           <div class="row gy-4 justify-content-between align-items-center">
             <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-              <img src="assets/img/img_sq_1.jpg" alt="Image" class="img-fluid">
-              <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox pulsating-play-btn">
+              <img src="assets/img/Travel/about-2.jpg" alt="Image" class="img-fluid about_2-img">
                 <span class="play"><i class="bi bi-play-fill"></i></span>
               </a>
             </div>
             <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-              <h2 class="content-title mb-4"><b>About Us</b></h2>
-              <p>Welcome to <i>"Mirissa Snorkeling Center"</i> – Your Gateway to Oceanic Adventures!</p>
+              <h2 class="content-title mb-4"><b>About SriLanka</b></h2>
+              <p>Welcome to <i>"The Pearl of the Indian Ocean"</i> – Your Gateway to Oceanic Adventures!</p>
               <p class="mb-4">
-                Nestled in the heart of paradise, we are passionate about delivering unforgettable marine experiences to adventurers, nature lovers, and ocean enthusiasts. 
-                From swimming alongside majestic turtles to witnessing the breathtaking dance of whales and dolphins, our goal is to connect you with the magic of the sea.
+                Sri Lanka, an island paradise in the heart of the Indian Ocean, is a land of breathtaking landscapes, rich history, and vibrant culture. From golden beaches and lush tea plantations 
+                to ancient ruins and diverse wildlife, Sri Lanka offers a perfect blend of adventure, relaxation, and heritage.
               </p>
 
-              <h5>State-of-the-Art Equipment:</h5>
-              <p class="mt-0">We provide the latest, high-quality gear for all our activities, ensuring comfort, reliability, and top-notch performance throughout your journey.</p>
+              <h5>Stunning Beaches:</h5>
+              <p class="mt-0">Relax on pristine shores and experience world-class surfing, divig and snorkeling.</p>
 
-              <h5>Affordable Adventures:</h5>
-              <p class="mt-0">Enjoy world-class ocean experiences at Reasonable prices. We offer exceptional value without redusing on quality or safety.</p>
+              <h5>Wildlife & Nature:</h5>
+              <p class="mt-0">Spot elephants, leopards, and whales in national parks and marine sanctuaries.</p>
 
-              <h5>Eco-Friendly Practices:</h5>
-              <p class="mb-4 mt-0">We prioritize sustainability to protect the ocean for future generations.</p>
+              <h5>Scenic Hill Country:</h5>
+              <p class="mb-4 mt-0">Wander through misty mountains, waterfalls, and lush tea estates.</p>
+
             </div>
           </div>
         </div>
-      </section><!-- /About 3 Section -->
-
-      <!-- Team Section -->
-      <section class="team-15 team section" id="team" style="border-top: 1px solid rgba(0, 128, 0, 0.6);">
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h2><b>Team</b></h2>
-          <p>At Mirissa Snorkeling Center, our passionate and skilled team is dedicated to making your marine adventures extraordinary. 
-            From professional diving instructors to friendly local guides, we combine expertise with a deep love for the ocean to provide safe, 
-            memorable, and awe-inspiring experiences.</p>
-        </div><!-- End Section Title -->
-
-        <div class="content">
-          <div class="container">
-
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-1.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Thashee</h3>
-                    <span class="position">padi divemaster and diving manager</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-2.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Rasa</h3>
-                    <span class="position">padi divemaster</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-3.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Dishan</h3>
-                    <span class="position">padi divemaster</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-4.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Isuru</h3>
-                    <span class="position">snorkeling guide</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-5.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Chammi</h3>
-                    <span class="position">captain</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="person">
-                  <figure>
-                    <img src="assets/img/team/team-6.jpg" alt="Image" class="img-fluid">
-                  </figure>
-                  <div class="person-contents">
-                    <h3>Salin</h3>
-                    <span class="position">MSDT instructor</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </section><!-- /Team Section -->
+      </section>
 
       <!-- Services Section -->
-      <section id="services" class="services section" style="border-top: 1px solid rgba(0, 128, 0, 0.6);">
+      <!-- <section id="services" class="services section" style="border-top: 1px solid rgba(0, 128, 0, 0.6);"> -->
 
         <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
+        <!-- <div class="container section-title" data-aos="fade-up">
           <h2><b>SERVICES</b></h2>
           <p>Embark on an unforgettable journey with our wide range of ocean adventures!</p>
         </div>
@@ -462,8 +368,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </section><!-- /Services Section -->
+        </div> -->
+      <!-- </section> -->
 
     </main>
 
@@ -474,16 +380,16 @@
           <div class="row gy-4">
             <div class="col-lg-4 col-md-6 footer-about">
               <a href="index.html" class="logo d-flex align-items-center">
-                <span class="sitename">Mirissa Snorkeling Center</span>
+                <span class="sitename">Travels Go Lanka</span>
               </a>
               <div class="footer-contact pt-3">
                 <p><strong>Address:</strong>
-                  <a href="https://www.google.com/maps/place/Mirissa+Snorkeling+Center/@5.9372882,80.479874,21z/data=!4m6!3m5!1s0x3ae13f004a5fc3df:0x82cd9932398dc4d8!8m2!3d5.9372882!4d80.479874!16s%2Fg%2F11ww4t30y8?entry=ttu&g_ep=EgoyMDI1MDEyMS4wIKXMDSoASAFQAw%3D%3D">
-                    Thappawatta Road, Mirissa.
+                  <a href="">
+                    Godagam, Homagama
                   </a>
                 </p>
-                <p class=""><strong>Phone:</strong><span><a href="tel:+94710310253">+94 71 031 0253</a></span></p>
-                <p><strong>Email:</strong> <span><a href="mailto:info@mirissasnorkelingcenter.com">info@mirissasnorkelingcenter.com</a></span></p>
+                <p class=""><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
+                <p><strong>Email:</strong> <span><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></span></p>
               </div>
             </div>
 
@@ -491,46 +397,44 @@
               <h4>Useful Links</h4>
               <ul>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#recent-posts">Services</a></li>
+                <li><a href="#recent-posts">Tour Packages</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                <li><a href="l">Things To Do in SriLanka</a></li>
               </ul>
             </div>
 
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#recent-posts">Snorkeling With Turtles</a></li>
-                <li><a href="#recent-posts">Night Snorkeling</a></li>
-                <li><a href="#recent-posts">Scuba Diving</a></li>
-                <li><a href="#recent-posts">Whales Watching Tours</a></li>
+                <li><a href="#recent-posts">Wildlife & Safari Tours</a></li>
+                <li><a href="#recent-posts">Cultural & Heritage Tours</a></li>
+                <li><a href="#recent-posts">Beach & Water Adventures</a></li>
+                <li><a href="#recent-posts">Hill Country & Tea Plantations</a></li>
               </ul>
             </div>
 
             <div class="col-lg-4 col-md-6 footer-links social-links  mb-3 mb-lg-0">
               <div class="d-flex align-items-center justify-content-center">
-                <a href="https://www.facebook.com/divingmirissa?mibextid=kFxxJD" target="_blank" style="color: #1877F2; margin-right: 10px;">
+                <a href="" target="_blank" style="color: #1877F2; margin-right: 10px;">
                   <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.instagram.com/divingmirissa?igsh=cnhqODlwNWRubDBl" target="_blank" style="color: #E4405F; margin-right: 10px;">
+                <a href="" target="_blank" style="color: #E4405F; margin-right: 10px;">
                   <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.tripadvisor.com/Attraction_Review-g1407334-d23738137-Reviews-Mirissa_Turtle_Snorkeling_Center-Mirissa_Southern_Province.html" target="_blank" style="margin-right: 10px;">
+                <a href="" target="_blank" style="margin-right: 10px;">
                   <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;">
                 </a>
-                <a href="https://youtube.com/@divingmirissa?si=SYVkM478nHGaVKaB" target="_blank" style="color: #FF0000;">
+                <a href="" target="_blank" style="color: #FF0000;">
                   <i class="bi bi-youtube" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.tiktok.com/@divingmirissa?_t=ZS-8sqSuS8W9K5&_r=1" target="_blank" style="color: #080808;">
+                <a href="" target="_blank" style="color: #080808;">
                   <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
                 </a>
               </div>
               <div class="mt-5 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Mirissa Snorkeling Center / Sri Lanka">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
               </div>
             </div>
-
-            
 
           </div>
         </div>
@@ -541,7 +445,7 @@
 
           <div class="d-flex flex-column align-items-center align-items-lg-start">
             <div>
-              © Copyright <strong><span>Mirissa Snorkeling Center</span></strong>. All Rights Reserved
+              © Copyright <strong><span>Travels Go Lanka</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
               Designed by <a href="https://www.webmindinnovations.com">WebMind Innovation</a>
@@ -563,7 +467,7 @@
 
     <!-- WhatsApp -->
     <div id="whatsapp-btn" class="whatsapp-button">
-      <a href="https://wa.me/+94710310253?text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20services">
+      <a href="https://wa.me/+94743773190?text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20services">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="50px"
           loading="lazy">
       </a>
