--- a/contact.html
+++ b/contact.html
@@ -177,17 +177,17 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Mirissa Snorkeling Center / Sri Lanka">
-          <h1 class="sitename">Mirissa Snorkeling Center</h1>
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="index.html#recent-posts">Our Services</a></li>
-            <!-- <li><a href="gallery.html">Gallery</a></li> -->
-            <li><a href="#" class="active">Contact</a></li>
+            <li><a href="index.html#recent-posts">Tour Packeges</a></li>
+            <li><a href="#">Things To Do in SriLanka</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -214,19 +214,12 @@
       </div>
 
       <!-- Contact Section -->
-      <section id="contact" class="contact section">
-
-        <div class="m-3">
-          <iframe style="width: 100%; height: 400px; border:0;" 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.411348388558!2d80.47793847480081!3d5.937902494046486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae13f004a5fc3df%3A0x82cd9932398dc4d8!2sMirissa%20Snorkeling%20Center!5e0!3m2!1sen!2slk!4v1737558684584!5m2!1sen!2slk"
-            frameborder="0" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
-        </div><!-- End Google Maps -->
+      <section id="contact" class="contact section mt-5">
 
         <div class="container" data-aos="fade">
           <div class="row gy-5 gx-lg-5">
-            <div class="col-lg-4">
 
+            <div class="col-lg-4">
               <div class="info">
                 <h3>Get in touch</h3>
                 <p>Have questions or ready to book your adventure? Reach out to us!</p>
@@ -235,15 +228,15 @@
                   <i class="bi bi-geo-alt flex-shrink-0"></i>
                   <div>
                     <h4>Location:</h4>
-                    <p>Thappawatta Road, Mirissa.</p>
+                    <p>Godagam, Homagama.</p>
                   </div>
                 </div><!-- End Info Item -->
 
                 <div class="info-item d-flex">
                   <i class="bi bi-envelope flex-shrink-0"></i>
-                  <div><a href="mailto:info@mirissasnorkelingcenter.com">
+                  <div><a href="mailto:info@travelsgolanka.com">
                     <h4>Email:</h4>
-                    <p>info@mirissasnorkelingcenter.com</p>
+                    <p>info@travelsgolanka.com</p>
                   </a>
                   </div>
                 </div><!-- End Info Item -->
@@ -251,16 +244,22 @@
                 <div class="info-item d-flex">
                   <i class="bi bi-phone flex-shrink-0"></i>
                   <div>
-                    <a href="tel:+94710310253">
+                    <a href="tel:+94743773190">
                     <h4>Call:</h4>
-                    <p>+94 71 031 0253</p>
+                    <p>+94 74 377 3190</p>
                   </a>
                   </div>
                 </div><!-- End Info Item -->
 
               </div>
-
             </div>
+            <div class="col-lg-8">
+              <iframe style="width: 100%; height: 400px; border:0;" 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15845.309673694637!2d80.02268119430467!3d6.851299389894074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae25248424ef777%3A0x8f7ca8306642ce77!2sGodagama!5e0!3m2!1sen!2slk!4v1742230748963!5m2!1sen!2slk"
+                frameborder="0" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+              </iframe>
+            </div>
+
           </div>
         </div>
 
@@ -275,16 +274,16 @@
           <div class="row gy-4">
             <div class="col-lg-4 col-md-6 footer-about">
               <a href="index.html" class="logo d-flex align-items-center">
-                <span class="sitename">Mirissa Snorkeling Center</span>
+                <span class="sitename">Travels Go Lanka</span>
               </a>
               <div class="footer-contact pt-3">
                 <p><strong>Address:</strong>
-                  <a href="https://www.google.com/maps/place/Mirissa+Snorkeling+Center/@5.9372882,80.479874,21z/data=!4m6!3m5!1s0x3ae13f004a5fc3df:0x82cd9932398dc4d8!8m2!3d5.9372882!4d80.479874!16s%2Fg%2F11ww4t30y8?entry=ttu&g_ep=EgoyMDI1MDEyMS4wIKXMDSoASAFQAw%3D%3D">
-                    Thappawatta Road, Mirissa.
+                  <a href="">
+                    Godagam, Homagama
                   </a>
                 </p>
-                <p class=""><strong>Phone:</strong><span><a href="tel:+94710310253">+94 71 031 0253</a></span></p>
-                <p><strong>Email:</strong> <span><a href="mailto:info@mirissasnorkelingcenter.com">info@mirissasnorkelingcenter.com</a></span></p>
+                <p class=""><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
+                <p><strong>Email:</strong> <span><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></span></p>
               </div>
             </div>
 
@@ -292,46 +291,44 @@
               <h4>Useful Links</h4>
               <ul>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#recent-posts">Services</a></li>
+                <li><a href="#recent-posts">Tour Packages</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <!-- <li><a href="gallery.html">Gallery</a></li> -->
+                <li><a href="l">Things To Do in SriLanka</a></li>
               </ul>
             </div>
 
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#recent-posts">Snorkeling With Turtles</a></li>
-                <li><a href="#recent-posts">Night Snorkeling</a></li>
-                <li><a href="#recent-posts">Scuba Diving</a></li>
-                <li><a href="#recent-posts">Whales Watching Tours</a></li>
+                <li><a href="#recent-posts">Wildlife & Safari Tours</a></li>
+                <li><a href="#recent-posts">Cultural & Heritage Tours</a></li>
+                <li><a href="#recent-posts">Beach & Water Adventures</a></li>
+                <li><a href="#recent-posts">Hill Country & Tea Plantations</a></li>
               </ul>
             </div>
 
             <div class="col-lg-4 col-md-6 footer-links social-links  mb-3 mb-lg-0">
               <div class="d-flex align-items-center justify-content-center">
-                <a href="https://www.facebook.com/divingmirissa?mibextid=kFxxJD" target="_blank" style="color: #1877F2; margin-right: 10px;">
+                <a href="" target="_blank" style="color: #1877F2; margin-right: 10px;">
                   <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.instagram.com/divingmirissa?igsh=cnhqODlwNWRubDBl" target="_blank" style="color: #E4405F; margin-right: 10px;">
+                <a href="" target="_blank" style="color: #E4405F; margin-right: 10px;">
                   <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.tripadvisor.com/Attraction_Review-g1407334-d23738137-Reviews-Mirissa_Turtle_Snorkeling_Center-Mirissa_Southern_Province.html" target="_blank" style="margin-right: 10px;">
+                <a href="" target="_blank" style="margin-right: 10px;">
                   <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;">
                 </a>
-                <a href="https://youtube.com/@divingmirissa?si=SYVkM478nHGaVKaB" target="_blank" style="color: #FF0000;">
+                <a href="" target="_blank" style="color: #FF0000;">
                   <i class="bi bi-youtube" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="https://www.tiktok.com/@divingmirissa?_t=ZS-8sqSuS8W9K5&_r=1" target="_blank" style="color: #080808;">
+                <a href="" target="_blank" style="color: #080808;">
                   <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
                 </a>
               </div>
               <div class="mt-5 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Mirissa Snorkeling Center / Sri Lanka">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
               </div>
             </div>
-
-            
 
           </div>
         </div>
@@ -342,7 +339,7 @@
 
           <div class="d-flex flex-column align-items-center align-items-lg-start">
             <div>
-              © Copyright <strong><span>Mirissa Snorkeling Center</span></strong>. All Rights Reserved
+              © Copyright <strong><span>Travels Go Lanka</span></strong>. All Rights Reserved
             </div>
             <div class="credits">
               Designed by <a href="https://www.webmindinnovations.com">WebMind Innovation</a>
@@ -364,7 +361,7 @@
 
     <!-- WhatsApp -->
     <div id="whatsapp-btn" class="whatsapp-button">
-      <a href="https://wa.me/+94710310253?text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20services">
+      <a href="https://wa.me/+94743773190?text=Hello%20I%20would%20like%20to%20inquire%20about%20your%20services">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="50px"
           loading="lazy">
       </a>
