adde contact form

--- a/about.html
+++ b/about.html
@@ -212,43 +212,73 @@
         </div>
       </div><!-- End Page Title -->
 
-      <!-- About 3 Section -->
-      <section id="about-3" class="about-3 section">
+      <!-- About Section -->
+      <section id="about" class="about section">
 
-        <div class="container">
-          <div class="row gy-4 justify-content-between align-items-center">
-            <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-              <img src="assets/img/Travel/about-2.jpg" alt="Image" class="img-fluid about_2-img">
-                <span class="play"><i class="bi bi-play-fill"></i></span>
-              </a>
-            </div>
-            <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
-              <h2 class="content-title mb-4"><b>About SriLanka</b></h2>
-              <p>Welcome to <i>"The Pearl of the Indian Ocean"</i> – Your Gateway to Oceanic Adventures!</p>
-              <p class="mb-4">
-                Sri Lanka, an island paradise in the heart of the Indian Ocean, is a land of breathtaking landscapes, rich history, and vibrant culture. From golden beaches and lush tea plantations 
-                to ancient ruins and diverse wildlife, Sri Lanka offers a perfect blend of adventure, relaxation, and heritage.
-              </p>
+        <div class="content">
+          <div class="container">
+            <div class="row">
+              <div class="col-lg-6 mb-4 mb-lg-0">
+                <img src="assets/img/Travel/about-1.jpg" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
+              </div>
+              <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
+                <h3 class="content-subtitle text-white opacity-50">Why Choose Travel Go Lanka?</h3>
+                <!-- <h2 class="content-title mb-4">
+                  More than <strong>5 years experience</strong> in Snorkeling & Diving industry
+                </h2> -->
+                <p class="opacity-50">
+                  Experience unmatched adventures with expert guides, top-tier equipment, and a commitment to sustainability. Your unforgettable journey begins here!
+                </p>
 
-              <h5>Stunning Beaches:</h5>
-              <p class="mt-0">Relax on pristine shores and experience world-class surfing, divig and snorkeling.</p>
+                <div class="row">
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-globe me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">Expertly Curated Tours</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Our travel packages are carefully designed to offer the best experiences across Sri Lanka.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-geo-alt me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">Local Expertise</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">With in-depth knowledge of the island, we ensure authentic and immersive journeys.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-airplane me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">Reliable & Hassle-Free Travel</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">From transport to accommodations, we handle everything for a smooth experience.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start mb-2">
+                    <i class="bi bi-headset me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">24/7 Customer Support</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Our team is always available to assist you before, during, and after your trip.</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 d-flex align-items-start">
+                    <i class="bi bi-shield-check me-4 display-6"></i>
+                    <div>
+                      <h4 class="m-0 h6 text-white">Your Safety is Our Priority</h4>
+                      <p class="text-white opacity-50" style="font-size: 13px;">Your well-being comes first. Our experienced guides and rigorous safety standards ensure every adventure is secure.</p>
+                    </div>
+                  </div>
+                </div>                
 
-              <h5>Wildlife & Nature:</h5>
-              <p class="mt-0">Spot elephants, leopards, and whales in national parks and marine sanctuaries.</p>
-
-              <h5>Scenic Hill Country:</h5>
-              <p class="mb-4 mt-0">Wander through misty mountains, waterfalls, and lush tea estates.</p>
-
+              </div>
             </div>
           </div>
         </div>
-      </section>
+      </section><!-- /About Section -->
 
       <!-- Services Section -->
-      <!-- <section id="services" class="services section" style="border-top: 1px solid rgba(0, 128, 0, 0.6);"> -->
+      <section id="services" class="services section" style="border-top: 1px solid rgba(0, 128, 0, 0.6);">
 
         <!-- Section Title -->
-        <!-- <div class="container section-title" data-aos="fade-up">
+        <div class="container section-title" data-aos="fade-up">
           <h2><b>SERVICES</b></h2>
           <p>Embark on an unforgettable journey with our wide range of ocean adventures!</p>
         </div>
@@ -368,8 +398,8 @@
               </div>
             </div>
           </div>
-        </div> -->
-      <!-- </section> -->
+        </div>
+      </section>
 
     </main>
 
