--- a/contact.html
+++ b/contact.html
@@ -477,7 +477,7 @@
 
 </script>
 
-<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
         $("#tourForm").submit(function (event) {
