--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
-    <title>Mirissa Snorkeling Center | Turtle 100% | Whales Watching</title>
+    <title>Travels Go Lanka | Turtle 100% | Whales Watching</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-B7NSNH5R7E"></script>
@@ -24,14 +24,14 @@
       {
           "@context" : "https://schema.org",
           "@type" : "WebSite",
-          "name" : "Mirissa Snorkeling Center",
+          "name" : "Travels Go Lanka",
           "alternateName" : "MSA",
-          "url" : "https://www.mirissasnorkelingcenter.com/",
+          "url" : "https://www.travelsgolanka.com/",
           "potentialAction": {
               "@type": "SearchAction",
               "target": {
               "@type": "EntryPoint",
-              "urlTemplate": "https://www.mirissasnorkelingcenter.com/search?q={search_term_string}"
+              "urlTemplate": "https://www.travelsgolanka.com/search?q={search_term_string}"
               },
               "query-input": "required name=search_term_string"
           }
@@ -41,18 +41,18 @@
       {
           "@context": "https://schema.org",
           "@type": "LocalBusiness",
-          "name": "Mirissa Snorkeling Center",
-          "image": "https://www.mirissasnorkelingcenter.com/assets/img/favicon.png",
+          "name": "Travels Go Lanka",
+          "image": "https://www.travelsgolanka.com/assets/img/favicon.png",
           "address": {
               "@type": "PostalAddress",
-              "streetAddress": "Mirissa Snorkeling Center, Thappawatta Rd, Mirissa",
+              "streetAddress": "Travels Go Lanka, Thappawatta Rd, Mirissa",
               "addressLocality": "Mirissa",
               "addressRegion": "Southern Province",
               "postalCode": "81740",
               "addressCountry": "Sri Lanka"
           },
-          "url": "https://www.mirissasnorkelingcenter.com/",
-          "telephone": "+94710310253"
+          "url": "https://www.travelsgolanka.com/",
+          "telephone": "+94743773190"
       }
     </script>    
     <script type="application/ld+json">
@@ -60,7 +60,7 @@
           "@context": "https://schema.org",
           "@type": "WebPage",
           "name": "Gallery",
-          "url": "https://www.mirissasnorkelingcenter.com/gallery.html"
+          "url": "https://www.travelsgolanka.com/gallery.html"
       }
     </script>
     <script type="application/ld+json">
@@ -68,7 +68,7 @@
           "@context": "https://schema.org",
           "@type": "WebPage",
           "name": "About",
-          "url": "https://www.mirissasnorkelingcenter.com/about.html"
+          "url": "https://www.travelsgolanka.com/about.html"
       }
     </script>
     <script type="application/ld+json">
@@ -76,7 +76,7 @@
           "@context": "https://schema.org",
           "@type": "WebPage",
           "name": "Contact",
-          "url": "https://www.mirissasnorkelingcenter.com/contact.html"
+          "url": "https://www.travelsgolanka.com/contact.html"
       }
     </script>
 
@@ -87,16 +87,16 @@
     <meta name="slurp" content="index, follow">
     <meta name="referrer" content="no-referrer">
     <meta name="description"
-        content="Join with 'Mirissa Snorkeling Center' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides.">
+        content="Join with 'Travels Go Lanka' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides.">
     <meta name="keywords"
-        content="Mirissa Snorkeling Center, Mirissa snorkeling, whale watching Mirissa, scuba diving Mirissa, night diving Mirissa, deep sea fishing Mirissa, mullet fishing mirissa, turtle snorkeling, whales snorkeling, 
+        content="Travels Go Lanka, Mirissa snorkeling, whale watching Mirissa, scuba diving Mirissa, night diving Mirissa, deep sea fishing Mirissa, mullet fishing mirissa, turtle snorkeling, whales snorkeling, 
         Sri Lanka snorkeling, deep sea tours, fishing tours, Mirissa, Things to do in Mirissa, Mirissa underwater adventures, Sri Lanka snorkeling, Fishing & Dolphin Watching, PADI Courses, Kayak Tours, Sunset Boat Tours">
-    <meta name="author" content="Mirissa Snorkeling Center">
-    <meta name="copyright" content="© 2024 Mirissa Snorkeling Center">
-    <link rel="canonical" href="https://www.mirissasnorkelingcenter.com/">
+    <meta name="author" content="Travels Go Lanka">
+    <meta name="copyright" content="© 2024 Travels Go Lanka">
+    <link rel="canonical" href="https://www.travelsgolanka.com/">
 
     <!-- sitemap.xml -->
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.mirissasnorkelingcenter.com/sitemap.xml">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="https://www.travelsgolanka.com/sitemap.xml">
 
     <!-- Preload -->
     <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style">
@@ -105,42 +105,42 @@
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Mirissa Snorkeling Center">
-    <meta name="application-name" content="Mirissa Snorkeling Center">
+    <meta name="apple-mobile-web-app-title" content="Travels Go Lanka">
+    <meta name="application-name" content="Travels Go Lanka">
 
     <!-- Dublin Core Meta Tags -->
-    <meta name="DC.title" content="Mirissa Snorkeling Center">
-    <meta name="DC.creator" content="Mirissa Snorkeling Center">
+    <meta name="DC.title" content="Travels Go Lanka">
+    <meta name="DC.creator" content="Travels Go Lanka">
     <meta name="DC.subject" content="Snorkeling With Turtle,Scuba Diving, Fishing & Dolphin Watching, PADI Courses, Kayak Tours, Sunset Boat Tours, Ocean Adventures, Snorkeling With Whales, whale watching Mirissa">
     <meta name="DC.description"
-        content="Explore the beauty of the ocean with Mirissa Snorkeling Center. We offer unforgettable Snorkeling, Diving, and Fishing experiences in Mirissa.">
-    <meta name="DC.publisher" content="Mirissa Snorkeling Center">
+        content="Explore the beauty of the ocean with Travels Go Lanka. We offer unforgettable Snorkeling, Diving, and Fishing experiences in Mirissa.">
+    <meta name="DC.publisher" content="Travels Go Lanka">
     <meta name="DC.contributor" content="Web Mind Innovation">
     <meta name="DC.date" content="2025-01-20">
     <meta name="DC.type" content="Text">
     <meta name="DC.format" content="text/html">
-    <meta name="DC.identifier" content="https://www.mirissasnorkelingcenter.com/">
+    <meta name="DC.identifier" content="https://www.travelsgolanka.com/">
     <meta name="DC.language" content="en">
     <meta name="DC.coverage" content="World">
-    <meta name="DC.rights" content="© 2024 Mirissa Snorkeling Center. All rights reserved.">
+    <meta name="DC.rights" content="© 2024 Travels Go Lanka. All rights reserved.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:locale" content="en_US">
     <meta property="og:locale:alternate" content="en_GB">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Mirissa Snorkeling Center">
+    <meta property="og:title" content="Travels Go Lanka">
     <meta property="og:description"
-        content="Join with 'Mirissa Snorkeling Center' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
-    <meta property="og:image" content="https://www.mirissasnorkelingcenter.com/assets/img/favicon.png">
-    <meta property="og:url" content="https://www.mirissasnorkelingcenter.com/index.html">
-    <meta property="og:site_name" content="Mirissa Snorkeling Center">
+        content="Join with 'Travels Go Lanka' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
+    <meta property="og:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
+    <meta property="og:url" content="https://www.travelsgolanka.com/index.html">
+    <meta property="og:site_name" content="Travels Go Lanka">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Mirissa Snorkeling Center">
+    <meta name="twitter:title" content="Travels Go Lanka">
     <meta name="twitter:description"
-        content="Join with 'Mirissa Snorkeling Center' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
-    <meta name="twitter:image" content="https://www.mirissasnorkelingcenter.com/assets/img/favicon.png">
+        content="Join with 'Travels Go Lanka' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
+    <meta name="twitter:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
     <meta name="twitter:site" content="@mirissasnorkelingcenter">
     <meta name="twitter:creator" content="@mirissasnorkelingcenter">
 
@@ -183,11 +183,11 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="index.html#recent-posts">Tour Packeges</a></li>
-            <li><a href="#">Things To Do in SriLanka</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html#Tour_Packages">Tour Packeges</a></li>
+            <li><a href="ThingsToDoinSriLanka.html">Things To Do in SriLanka</a></li>
+            <li><a href="#" class="active">Contact</a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
@@ -237,7 +237,7 @@
                   <i class="bi bi-geo-alt flex-shrink-0"></i>
                   <div>
                     <h4>Location:</h4>
-                    <p>Godagam, Homagama.</p>
+                    <p>120/1/D Wateraka, padukka, srilanka.</p>
                   </div>
                 </div><!-- End Info Item -->
 
@@ -369,25 +369,25 @@
               <h4>Useful Links</h4>
               <ul>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="#recent-posts">Tour Packages</a></li>
+                <li><a href="index.html#Tour_Packages">Tour Packages</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li><a href="l">Things To Do in SriLanka</a></li>
+                <li><a href="ThingsToDoinSriLanka.html">Things To Do in SriLanka</a></li>
               </ul>
             </div>
 
             <div class="col-lg-2 col-md-3 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#recent-posts">Wildlife & Safari Tours</a></li>
-                <li><a href="#recent-posts">Cultural & Heritage Tours</a></li>
-                <li><a href="#recent-posts">Beach & Water Adventures</a></li>
-                <li><a href="#recent-posts">Hill Country & Tea Plantations</a></li>
+                <li><a href="index.html#Tour_Packages">Wildlife & Safari Tours</a></li>
+                <li><a href="index.html#Tour_Packages">Cultural & Heritage Tours</a></li>
+                <li><a href="index.html#Tour_Packages">Beach & Water Adventures</a></li>
+                <li><a href="index.html#Tour_Packages">Hill Country & Tea Plantations</a></li>
               </ul>
             </div>
 
             <div class="col-lg-4 col-md-6 footer-links social-links  mb-3 mb-lg-0">
               <div class="d-flex align-items-center justify-content-center">
-                <a href="" target="_blank" style="color: #1877F2; margin-right: 10px;">
+                <a href="https://www.facebook.com/share/18aAmqQkGS/" target="_blank" style="color: #1877F2; margin-right: 10px;">
                   <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
                 </a>
                 <a href="" target="_blank" style="color: #E4405F; margin-right: 10px;">
@@ -403,8 +403,8 @@
                   <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
                 </a>
               </div>
-              <div class="mt-5 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+              <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
               </div>
             </div>
 
