--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
@@ -307,7 +307,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
@@ -319,7 +319,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
@@ -333,7 +333,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
@@ -345,7 +345,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
@@ -357,7 +357,7 @@
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
-                    <span class="position">Destination</span>
+                    <span class="position">Designation</span>
                   </div>
                 </div>
               </div>
