--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <meta name="slurp" content="index, follow">
     <meta name="referrer" content="no-referrer">
     <meta name="description"
-        content="">
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
     <meta name="keywords"
-        content="">
+        content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
     <meta name="author" content="Travels Go Lanka">
     <meta name="copyright" content="© 2024 Travels Go Lanka">
     <link rel="canonical" href="https://www.travelsgolanka.com/">
@@ -100,9 +100,9 @@
     <!-- Dublin Core Meta Tags -->
     <meta name="DC.title" content="Travels Go Lanka">
     <meta name="DC.creator" content="Travels Go Lanka">
-    <meta name="DC.subject" content="Snorkeling With Turtle,Scuba Diving, Fishing & Dolphin Watching, PADI Courses, Kayak Tours, Sunset Boat Tours, Ocean Adventures, Snorkeling With Whales, whale watching Mirissa">
+    <meta name="DC.subject" content="Sri Lanka tours, travel Sri Lanka, Sri Lanka tour packages, cultural tours Sri Lanka, wildlife safaris, beach holidays Sri Lanka, hill country tours, adventure travel Sri Lanka, private tours Sri Lanka, best Sri Lanka travel agency">
     <meta name="DC.description"
-        content="Explore the beauty of the ocean with Travels Go Lanka. We offer unforgettable Snorkeling, Diving, and Fishing experiences in Mirissa.">
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
     <meta name="DC.publisher" content="Travels Go Lanka">
     <meta name="DC.contributor" content="Web Mind Innovation">
     <meta name="DC.date" content="2025-03-23">
@@ -119,7 +119,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Travels Go Lanka">
     <meta property="og:description"
-        content="Join with 'Travels Go Lanka' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
     <meta property="og:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
     <meta property="og:url" content="https://www.travelsgolanka.com/index.html">
     <meta property="og:site_name" content="Travels Go Lanka">
@@ -128,10 +128,10 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Travels Go Lanka">
     <meta name="twitter:description"
-        content="Join with 'Travels Go Lanka' to unforgettable ocean adventures with snorkeling, diving, fishing, dolphin & whale watching tours in Mirissa. Expert guides, stunning views, and marine life await!.">
+        content="Travels Go Lanka offers customized Sri Lanka tour packages, cultural tours, wildlife safaris, beach adventures, and hill country explorations for travelers seeking unforgettable experiences.">
     <meta name="twitter:image" content="https://www.travelsgolanka.com/assets/img/favicon.png">
-    <meta name="twitter:site" content="@mirissasnorkelingcenter">
-    <meta name="twitter:creator" content="@mirissasnorkelingcenter">
+    <meta name="twitter:site" content="@travelsgolanka">
+    <meta name="twitter:creator" content="@travelsgolanka">
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
